kubernetes/kube-system/cilium/-keep.yaml
# !  manaully install gateway api crds
# ---
# apiVersion: "cilium.io/v2alpha1"
# kind: CiliumLoadBalancerIPPool
# metadata:
#   name: "test-pool"
# spec:
#   blocks:
#     - start: "192.168.20.200"
#       stop: "192.168.20.250"
#   serviceSelector:
#     matchLabels:
#       io.cilium.gateway/owning-gateway: test-gw
#       gateway.networking.k8s.io/gateway-name: test-gw

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
spec:
  parentRefs:
    - namespace: kube-system
      name: test-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: ingress-nginx-controller
          port: 80
